--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ public/apple-touch-icon*
 lib/tasks/deploy.rake
 config/initializers/production.rb
 config/initializers/development.rb
+config/initializers/test.rb
 config/database.yml
 config/initializers/secret_token.rb
 config/*.sphinx.conf
