--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ lib/tasks/deploy.rake
 config/initializers/production.rb
 config/initializers/development.rb
 config/initializers/test.rb
+config/initializers/email.rb
 config/database.yml
 config/initializers/secret_token.rb
 config/*.sphinx.conf
